--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -7,7 +7,9 @@
     android:background="@color/overcast"
     tools:context="com.example.jason.route_application.features.container.ContainerActivity">
 
-    <include layout="@layout/loading_screen"/>
+    <include
+        android:visibility="gone"
+        layout="@layout/loading_screen"/>
 
     <android.support.constraint.ConstraintLayout
 
@@ -165,59 +167,19 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="100dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_navigation_wrapper"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info_bar_wrapper">
 
     </android.support.v4.view.ViewPager>
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/fragment_navigation_wrapper"
-        android:layout_width="0dp"
+    <android.support.design.widget.BottomNavigationView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/address_list_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="64dp"
-            android:layout_marginStart="64dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/address_list_ic" />
-
-        <ImageView
-            android:id="@+id/map_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/address_list_iv"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/map_ic"
-            app:layout_constraintEnd_toStartOf="@+id/drive_list_iv"/>
-
-        <ImageView
-            android:id="@+id/drive_list_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="64dp"
-            android:layout_marginRight="64dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/route_list_ic"/>
-    </android.support.constraint.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
