--- a/app/src/main/res/layout/activity_address_details.xml
+++ b/app/src/main/res/layout/activity_address_details.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:id="@+id/rootLayout"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             tools:context=".features.addressDetails.AddressDetailsActivity">
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootLayout"
+    android:background="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".features.addressDetails.AddressDetailsActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/subLayout"
@@ -44,7 +46,7 @@
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/addressTypeImageView"
-            app:layout_constraintTop_toTopOf="@+id/subLayout" />
+            app:layout_constraintTop_toTopOf="@+id/subLayout"/>
 
         <TextView
             android:id="@+id/postcodeTextView"
@@ -81,7 +83,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_private_marker" />
+            app:srcCompat="@drawable/ic_private_marker"/>
 
         <ProgressBar
             android:id="@+id/typeChangeProgress_pb"
@@ -161,7 +163,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/subLayout"/>
 
     <TextView
         android:id="@+id/messageToUserTextView"
@@ -173,7 +175,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -188,7 +190,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/subLayout"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addCommentBtn"
@@ -196,11 +198,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:clickable="true"
         android:focusable="true"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_1"
-        android:layout_marginRight="32dp" />
+        app:srcCompat="@drawable/ic_1"/>
 </android.support.constraint.ConstraintLayout>
