--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,12 +3,15 @@
       xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/nav_address"
         android:title="Address list"
         android:icon="@drawable/list"/>
     <item
+        android:id="@+id/nav_map"
         android:title="Map"
         android:icon="@drawable/places"/>
     <item
+        android:id="@+id/nav_route"
         android:title="Route list"
         android:icon="@drawable/navigation"/>
 </menu>
