--- a/app/src/main/res/layout/list_item_drive.xml
+++ b/app/src/main/res/layout/list_item_drive.xml
@@ -41,6 +41,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:srcCompat="@drawable/valid_ic"/>
     </LinearLayout>
 
