--- a/app/src/main/res/layout/activity_address_details.xml
+++ b/app/src/main/res/layout/activity_address_details.xml
@@ -30,7 +30,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_google_search3"/>
+            app:srcCompat="@drawable/search_ic"/>
 
         <TextView
             android:id="@+id/streetTextView"
@@ -83,7 +83,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_private_marker"/>
+            app:srcCompat="@drawable/home_ic"/>
 
         <ProgressBar
             android:id="@+id/typeChangeProgress_pb"
