--- a/app/src/main/res/layout/list_item_drive.xml
+++ b/app/src/main/res/layout/list_item_drive.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:text="@string/position.list_travel_information"
             android:textColor="@color/colorPrimaryDark"
+            android:layout_marginTop="16dp"
             android:textStyle="bold"
             android:visibility="visible"
             android:textAlignment="center"/>
@@ -33,7 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/addressType.list_travel_information"
-            app:srcCompat="@drawable/ic_private_marker"
+            app:srcCompat="@drawable/home_ic"
+            android:layout_marginTop="5dp"
             tools:layout_editor_absoluteY="171dp"
             tools:layout_editor_absoluteX="134dp"/>
 
@@ -61,14 +63,14 @@
         android:id="@+id/estimatedArrivalTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/arrival_time.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cityTextView"/>
+        app:layout_constraintTop_toBottomOf="@+id/cityTextView"
+        app:layout_constraintEnd_toEndOf="@+id/go_iv"/>
 
     <TextView
         android:id="@+id/cityTextView"
@@ -127,7 +129,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        app:srcCompat="@drawable/ic_go_button4"
+        app:srcCompat="@drawable/drive_ic_large"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
