--- a/app/src/main/res/layout/list_item_address.xml
+++ b/app/src/main/res/layout/list_item_address.xml
@@ -21,25 +21,29 @@
         >
 
         <TextView
-            android:id="@+id/position_tv"
+            android:id="@+id/positionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="1"
-            android:gravity="center"
-            android:textStyle="bold"/>
+            android:text="@string/position.list_travel_information"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginTop="16dp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            android:textAlignment="center"/>
 
         <ImageView
             android:id="@+id/address_type_iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_private_marker"/>
+            android:layout_marginTop="5dp"
+            app:srcCompat="@drawable/home_ic"/>
 
         <ImageView
             android:id="@+id/status_iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="invisible"
-            app:srcCompat="@drawable/invalid_ic"/>
+            app:srcCompat="@drawable/home_ic"/>
     </LinearLayout>
 
     <TextView
